Unable to get information about file objects in manager